--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
+# Java
+
+# Build
+build
+out
+
+# Gradle
 .gradle
-/build/
 
-# Ignore Gradle GUI config
-gradle-app.setting
+# IntelliJ
+.idea
 
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
-
-# Cache of project
-.gradletasknamecache
-
-# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
-# gradle/wrapper/gradle-wrapper.properties
+# MacOSX
+.DS_Store
+tko2019.iml
