--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,10 @@ def includeDesktopSupport = false
 // Maven central needed for JUnit
 repositories {
     mavenCentral()
+    jcenter()
+    maven {
+        url "https://jitpack.io"
+    }
 }
 
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
@@ -52,6 +56,7 @@ dependencies {
     compile wpi.deps.vendor.java()
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
+    implementation 'com.github.OLeather:pure-pursuit-controller:-SNAPSHOT'
     testCompile 'junit:junit:4.12'
 }
 
