Made steering wheel a library and changed wheel drive command

--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     compile wpi.deps.vendor.java()
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
+    implementation 'com.github.mittyrobotics:tko-common-controls:v1.0'
     implementation 'com.github.MittyRobotics:pure-pursuit-controller:v1.1'
     implementation 'com.github.MittyRobotics:motion-profile-generator:v1.2'
     testCompile 'junit:junit:4.12'
