Fixed imports and forced get latest commit for team1351 libraries
build.gradle should now force get the latest version of all the team1351 libraries. This is a temporary fix for people having different versions, and will be changed back to releases once there is a new release for each library.

--- a/build.gradle
+++ b/build.gradle
@@ -57,11 +57,11 @@ dependencies {
     compile wpi.deps.vendor.java()
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
-    implementation 'com.github.mittyrobotics:tko-common-controls:v1.0'
-    implementation 'com.github.mittyrobotics:motion-profile-generator:v1.3'
-    implementation 'com.github.mittyrobotics:pure-pursuit-controller:v1.4'
+    implementation 'com.github.mittyrobotics:motion-profile-generator:b84692d564'
+    implementation 'com.github.mittyrobotics:pure-pursuit-controller:af9d6c7b1a'
+    implementation 'com.github.mittyrobotics:tko-common-controls:f690d17f86'
 
-    testCompile 'junit:junit:4.12'
+    testCompile 'junit:junit:4.12' 
 }
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
