--- a/build.gradle
+++ b/build.gradle
@@ -57,9 +57,9 @@ dependencies {
     compile wpi.deps.vendor.java()
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
-    compile 'com.github.mittyrobotics:motion-profile-generator:3f4943c2e9'
-    compile 'com.github.mittyrobotics:pure-pursuit-controller:91984c9201'
-    compile 'com.github.mittyrobotics:tko-common-controls:f690d17f86'
+    compile 'com.github.Mittyrobotics:motion-profile-generator:d4f1c51df7'
+    compile 'com.github.Mittyrobotics:pure-pursuit-controller:cce9999a0d'
+    compile 'com.github.Mittyrobotics:tko-common-controls:v1.1'
 
     testCompile 'junit:junit:4.12' 
 }
