--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,9 @@ dependencies {
     compile 'com.github.mittyrobotics:pure-pursuit-controller:784a71d38c'
     compile 'com.github.Mittyrobotics:tko-common-controls:v1.1'
 
+    // https://mvnrepository.com/artifact/org.jfree/jfreechart
+    compile group: 'org.jfree', name: 'jfreechart', version: '1.5.0'
+
     testCompile 'junit:junit:4.12' 
 }
 
